--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "swiftblade"
-version = "1.0.0"
+version = "1.1.0"
 description = "High-performance Laravel Blade-inspired template engine for Python"
 readme = "README.md"
 requires-python = ">=3.7"
@@ -47,10 +47,10 @@ Repository = "https://github.com/Sapistudio/swiftblade"
 "Bug Tracker" = "https://github.com/Sapistudio/swiftblade/issues"
 
 [tool.setuptools]
-packages = ["blade", "blade.cache", "blade.handlers", "blade.handlers.control", "blade.utils"]
+packages = ["swiftblade", "swiftblade.cache", "swiftblade.handlers", "swiftblade.handlers.control", "swiftblade.utils"]
 
 [tool.setuptools.package-data]
-blade = ["py.typed"]
+swiftblade = ["py.typed"]
 
 [tool.black]
 line-length = 100
