--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "swiftblade"
 version = "1.1.0"
 description = "High-performance Laravel Blade-inspired template engine for Python"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.11"
 license = {text = "MIT"}
 keywords = ["template", "engine", "blade", "laravel", "templating", "html", "swift", "fast"]
 authors = [
@@ -20,12 +20,9 @@ classifiers = [
     "Topic :: Text Processing :: Markup :: HTML",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Operating System :: OS Independent",
     "Typing :: Typed",
 ]
@@ -33,11 +30,11 @@ dependencies = []
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
-    "pytest-cov>=3.0.0",
-    "black>=22.0.0",
-    "mypy>=0.950",
-    "flake8>=4.0.0",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+    "black>=25.9.0",
+    "mypy>=1.18.2",
+    "flake8>=7.3.0",
 ]
 
 [project.urls]
@@ -54,7 +51,7 @@ swiftblade = ["py.typed"]
 
 [tool.black]
 line-length = 100
-target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
+target-version = ['py311', 'py312', 'py313']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -71,7 +68,7 @@ extend-exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.7"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
